--- a/app/views/plays/index.html.erb
+++ b/app/views/plays/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Plays#index</h1>
-<p>Find me in app/views/plays/index.html.erb</p>
+<div class="container">
+  <% @plays.each do |play| %>
+    <%= link_to play.title , play_path(play) %>
+    <%= time_ago_in_words(play.created_at) %> ago
+  <% end %>
+  <br>
+  <%= link_to 'Create' , new_play_path %>
+</div>
