--- a/app/views/plays/show.html.erb
+++ b/app/views/plays/show.html.erb
@@ -1,9 +1,13 @@
-<div class="container">
-  <h1><%= @play.title %></h1>
-  <h3><%= @play.description %></h3>
-  <p><i><%= @play.director %></i></p>
+<h1><%= @play.title %></h1>
+<h3><%= @play.description %></h3>
+<p><i><%= @play.director %></i></p>
 
-  <%= link_to 'Back' , root_path %>
-  <%= link_to 'Edit' , edit_play_path(@play) %>
-  <%= link_to 'Delete' , play_path(@play), method: :delete %>
+<div class="links btn-group">
+  <% if user_signed_in? %>
+    <% if @play.user_id == current_user.id %>
+      <%= link_to 'Edit' , edit_play_path(@play) %>
+      <%= link_to 'Delete' , play_path(@play), method: :delete %>
+    <% end %>
+  <% end %>
 </div>
+
