--- a/app/views/plays/show.html.erb
+++ b/app/views/plays/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%= @play.title %></h1>
+<h4><%= @play.category.name %></h4>
 <h3><%= @play.description %></h3>
 <p><i><%= @play.director %></i></p>
 
