--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,45 +4,55 @@
     <title>ImdbApp</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+    <body>
+	<nav class="navbar navbar-default">
+		<div class="container">
+			<div class="navbar-header">
+				<%= link_to "Broadway", root_path, class: "navbar-brand"  %>
+			</div>
 
-    <nav class="navbar navbar-default">
-      <div class="container">
+			<ul class="nav navbar-nav navbar-right">
+				<% if user_signed_in? %>
+					<li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+				<% else %>
+					<li><%= link_to "Sign Up", new_user_registration_path %></li>
+					<li><%= link_to "Log In", new_user_session_path %></li>
+				<% end %>
+			</ul>
 
-        <div class="navbar-header">
-          <%= link_to 'Broadway' , root_path, class: 'navbar-brand' %>
-        </div>
+			<ul class="nav navbar-nav">
+				<li class="dropdown">
+					<a href='#' class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="true">Genres <span class="caret"></span></a>
 
-        <ul class="nav navbar-nav navbar-right">
-          <% if user_signed_in? %>
-            <li><%= link_to 'Sign Out' , destroy_user_session_path, method: :delete %></li>
-          <% else %>
-            <li><%= link_to 'Sign Up' , new_user_registration_path %></li>
-            <li><%= link_to 'Log In' , new_user_session_path %></li>
-          <% end %>
-        </ul>
+					<ul class="dropdown-menu" role="menu">
+						<% Category.all.each do |category| %>
+							<li class="<%= 'active' if params[:category] == category.name %>">
+								<%= link_to category.name, plays_path(category: category.name), class: "link" %>
+							</li>
+						<% end %>	
+					</ul>
+				</li>
 
-        <ul class="nav navbar-nav">
-          <% if user_signed_in? %>
-            <li><%= link_to 'Add Play' , new_play_path %></li>
-          <% end %>
-        </ul>
+				<% if user_signed_in? %>
+					<li><%= link_to "Add Play", new_play_path %></li>
+				<% end %>
+			</ul>
+		</div>
+	</nav>
 
-      </div>
-    </nav>
 
-    <div class="container">
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
-      <%= yield %>
+	<p class="notice"><%= notice %></p>
+	<p class="alert"><%= alert %></p>
 
-    </div>
-    
+	<div class="container">
+		<%= yield %>
+	</div>
 
-  </body>
+</body>
+
 </html>
